--- a/AlumnoEjemplos/AlumnoEjemplos.csproj
+++ b/AlumnoEjemplos/AlumnoEjemplos.csproj
@@ -87,7 +87,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NeneMalloc\Avatar.cs" />
+    <Compile Include="NeneMalloc\Character.cs" />
+    <Compile Include="NeneMalloc\Controller.cs" />
     <Compile Include="NeneMalloc\EjemploAlumno.cs" />
+    <Compile Include="NeneMalloc\Orders.cs" />
+    <Compile Include="NeneMalloc\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
