--- a/AlumnoEjemplos/AlumnoEjemplos.csproj
+++ b/AlumnoEjemplos/AlumnoEjemplos.csproj
@@ -93,6 +93,7 @@
     <Compile Include="NeneMalloc\EjemploAlumno.cs" />
     <Compile Include="NeneMalloc\Orders.cs" />
     <Compile Include="NeneMalloc\Player.cs" />
+    <Compile Include="NeneMalloc\TgcSkelealMeshFNAT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
