--- a/AlumnoEjemplos/AlumnoEjemplos.csproj
+++ b/AlumnoEjemplos/AlumnoEjemplos.csproj
@@ -91,6 +91,8 @@
     <Compile Include="NeneMalloc\Character.cs" />
     <Compile Include="NeneMalloc\Controller.cs" />
     <Compile Include="NeneMalloc\EjemploAlumno.cs" />
+    <Compile Include="NeneMalloc\Lamp.cs" />
+    <Compile Include="NeneMalloc\Lantern.cs" />
     <Compile Include="NeneMalloc\Order.cs" />
     <Compile Include="NeneMalloc\Player.cs" />
     <Compile Include="NeneMalloc\Utils\CollitionManager.cs" />
