--- a/AlumnoEjemplos/AlumnoEjemplos.csproj
+++ b/AlumnoEjemplos/AlumnoEjemplos.csproj
@@ -89,13 +89,16 @@
   <ItemGroup>
     <Compile Include="NeneMalloc\Avatar.cs" />
     <Compile Include="NeneMalloc\Character.cs" />
+    <Compile Include="NeneMalloc\Checkpoint.cs" />
     <Compile Include="NeneMalloc\Controller.cs" />
     <Compile Include="NeneMalloc\EjemploAlumno.cs" />
     <Compile Include="NeneMalloc\Lamp.cs" />
     <Compile Include="NeneMalloc\Lantern.cs" />
     <Compile Include="NeneMalloc\Order.cs" />
     <Compile Include="NeneMalloc\Player.cs" />
+    <Compile Include="NeneMalloc\Utils\CheckpointHelper.cs" />
     <Compile Include="NeneMalloc\Utils\CollitionManager.cs" />
+    <Compile Include="NeneMalloc\Utils\Floor.cs" />
     <Compile Include="NeneMalloc\Utils\TruccoFPSCamera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
